I have added these improvements :
1️⃣ Global Exception Handling
2️⃣ Structured Logging (SLF4J)
3️⃣ Request Validation Hardening
4️⃣ Swagger / OpenAPI Documentation
5️⃣ Standard API Response Wrapper
6️⃣ Unit Testing (RuleEngine + Service)